--- a/mock-chubbies/package.json
+++ b/mock-chubbies/package.json
@@ -27,5 +27,10 @@
     "packages": [
       "packages/*"
     ]
+  },
+  "dependencies": {
+    "@ethereumjs/tx": "^3.1.2",
+    "ethereumjs-tx": "^1.3.7",
+    "web3": "^1.3.5"
   }
 }
